# grpo-vs-ppo

./: .gitignore  README.md  algorithm.py  check_experiments.py  plot_paper.py  pyproject.toml
scripts/: experiment-fig1-dense-vs-sparse.sh  experiment-fig2-gamma-sweep.sh  experiment-fig3-baselines.sh  experiment-fig4-lambda-grid.sh  experiment-fig5-subtrajectory.sh  wandb_fetch_runs.py
