[project]
name = "cleanrl"
version = "2.0.0b1"
description = "High-quality single file implementation of Deep Reinforcement Learning algorithms with research-friendly features"
authors = [{ name = "Costa Huang", email = "costa.huang@outlook.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "reinforcement learning",
    "machine learning",
    "research",
]
dependencies = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.11",
    "gym==0.23.1",
    "gymnasium==0.29.1",
    "torch==2.4.1",
    "moviepy>=1.0.3",
    "pygame>=2.1",
    "huggingface-hub>=0.11.1",
    "rich<12.0",
    "tenacity>=8.2.2",
    "tyro>=0.5.10",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "envpool>=1.2.0",
]

[project.optional-dependencies]
envpool = ["envpool>=1.2.0"]
mujoco = [
    "mujoco>=3.0.0",
    "imageio>=2.14.1,<3",
]
dm_control = [
    "shimmy>=1.1.0",
    "mujoco>=3.0.0",
    "dm-control>=1.0.10",
    "h5py>=3.7.0",
]
optuna = [
    "optuna>=3.0.1,<4",
    "optuna-dashboard>=0.7.2,<0.8",
    "typing_extensions>=4.6.0"
]
pytest = ["pytest>=7.1.3,<8"]

[dependency-groups]
dev = ["pre-commit>=2.20.0,<3"]

[tool.hatch.build.targets.sdist]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[tool.hatch.build.targets.wheel]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
